Align public API docs and properties sorting
